--- a/index.html
+++ b/index.html
@@ -41,6 +41,31 @@
 			integrity="sha256-S1J4GVHHDMiirir9qsXWc8ZWw74PHHafpsHp5PXtjTs="
 			crossorigin="anonymous"
 		></script>
-		<script></script>
+		<script>// This function loads pokemon data from the Pokemon API
+            function fetchSimpsonQuoteJSON() {
+                // Feel free to download this HTML and edit it, to use another Pokemon ID
+                const url = `https://simpsons-quotes-api.herokuapp.com/quotes/`;
+                axios.get(url)
+                  .then(function(response) {
+                    return response.data; // response.data instead of response.json() with fetch
+                  })
+                  .then(function(simpson) {
+                    console.log('data decoded from JSON:', simpson);
+              
+                    // Build a block of HTML
+                    const simpsonHtml = `
+                      <p><strong>${simpson[0].character}</strong></p>
+                      <img src="${simpson[0].image}" />
+                      <p><strong>${simpson[0].quote}</strong></p>
+                      <button id="myBtn">Get one quote</button>
+                    `;
+                    document.querySelector('#chuck-norris').innerHTML = simpsonHtml;
+                    const element = document.getElementById("myBtn");
+                    element.addEventListener("click", fetchSimpsonQuoteJSON);
+                  });
+              }
+              
+              fetchSimpsonQuoteJSON();
+              </script>
 	</body>
 </html>
